[package]
name = "saxrumfex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
env_logger = "0.11.3"
log = "0.4"
wgpu ="0.19.3"
pollster = "0.3"
bytemuck = { version = "1.15.0", features = [ "derive" ] }
nanorand = "0.7.0"
pico-args = "0.5.0"
